Fix [DropDownMenuSelect disabled] not to overlap bottom margin (RM-2129)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@15252 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocReferenceValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocReferenceValue.css
@@ -81,7 +81,7 @@ span.bocReferenceValue span.content * {
 
 span.bocReferenceValue .disabled span.content 
 {
-  padding: 3px;
+  padding: 0.5px 3px;
 }
 
 span.bocReferenceValue.disabled img
